crates/elm-client-gen-derive-tests/tests/compile_fail/untagged_multi_field_tuple_variant.stderr
error: untagged enums only support tuple variants with a single field; wrap multiple values in a struct variant
 --> tests/compile_fail/untagged_multi_field_tuple_variant.rs:7:5
  |
7 |     Point(i32, i32),
  |     ^^^^^^^^^^^^^^^
